[gd_scene load_steps=2 format=3 uid="uid://inventory_screen"]

[ext_resource type="Script" path="res://scripts/screens/InventoryScreen.gd" id="1_script"]

[node name="InventoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.051, 0.067, 0.09, 1)

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 56.0
theme_override_constants/separation = 12

[node name="BackButton" type="Button" parent="Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "‚Üê Îí§Î°ú"

[node name="TitleLabel" type="Label" parent="Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.902, 0.929, 0.953, 1)
theme_override_font_sizes/font_size = 20
text = "Ïπ¥Îìú Ïù∏Î≤§ÌÜ†Î¶¨"
vertical_alignment = 1

[node name="CountLabel" type="Label" parent="Header"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.545, 0.58, 0.62, 1)
theme_override_font_sizes/font_size = 14
text = "0 / 0"
vertical_alignment = 1

[node name="DeckBuilderButton" type="Button" parent="Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üÉè Îç± Ìé∏ÏÑ±"

[node name="FilterBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 64.0
offset_right = -16.0
offset_bottom = 108.0
theme_override_constants/separation = 8

[node name="FilterContainer" type="HBoxContainer" parent="FilterBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="SortButton" type="Button" parent="FilterBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Î†àÏñ¥ÎèÑ ‚Üì"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 116.0
offset_right = -16.0
offset_bottom = -16.0

[node name="CardsGrid" type="GridContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 4

[node name="EmptyLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.545, 0.58, 0.62, 1)
theme_override_font_sizes/font_size = 16
text = "Î≥¥Ïú†Ìïú Ïπ¥ÎìúÍ∞Ä ÏóÜÏäµÎãàÎã§
Í∞ÄÏ±†ÏóêÏÑú Ïπ¥ÎìúÎ•º ÎΩëÏïÑÎ≥¥ÏÑ∏Ïöî!"
horizontal_alignment = 1
vertical_alignment = 1
